fix overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,7 +25,6 @@ body {
     )
     rgb(var(--background-start-rgb)); */
   background-color: white;
-  overflow-y: hidden;
 }
 
 @layer utilities {
